--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ video#bgvid {
 
 	<!--<div class="center" style="margin: 00px 60px">-->
 	
-	<video playsinline autoplay loop id="bgvid">
+	<video playsinline muted autoplay loop id="bgvid">
 	
 	 <source src="yonkers.webm" type="video/webm">
 	 <source src="yonkers.mp4" type="video/mp4">
