--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@ video#bgvid {
 
 	<!--<div class="center" style="margin: 00px 60px">-->
 	
-	<video playsinline autoplay muted loop id="bgvid">
+	<video playsinline autoplay  controls loop id="bgvid">
 	
 	 <source src="yonkers.webm" type="video/webm">
 	 <source src="yonkers.mp4" type="video/mp4">
